div in fqw in add some text in ther ok

--- a/style1.css
+++ b/style1.css
@@ -1055,7 +1055,9 @@ h4 {
     margin-right: 15px;
     vertical-align: middle;
 }
-
+.fqw{
+    background-color: #000;
+}
 /* Footer bottom */
 .footer-bottom {
     max-width: 1200px;
