--- a/style1.css
+++ b/style1.css
@@ -289,9 +289,18 @@ body {
     .gym-type-card {
         min-width: 110px;
         max-width: 130px;
+    
+    }
+    .text p{
+        margin-top: 0;
+        margin-bottom: 1rem;
     }
 }
-
+.text p{
+    margin-top: 0;
+    margin-bottom: 1rem;
+    margin-left: 102px;
+}
 .text {
     padding: 10px 30px 10px 10px;
     display: block;
